ISAICP-6701: Enforce full width of the search bar to avoid small aligning differences between Chrome and Firefox at widths > 1400px.

--- a/web/themes/ventuno/src/scss/components/_global-search-block.scss
+++ b/web/themes/ventuno/src/scss/components/_global-search-block.scss
@@ -4,8 +4,6 @@
   @extend .me-3;
   @extend .col-lg;
   .search-bar {
-    max-width: 40rem;
-    margin: 0 auto;
     .search-bar__input {
       border-style: none;
       border-top-left-radius: $border-radius;
